[feat/#2] 추천 API 성능 개선